--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "dist/bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "build-and-tag": "node build.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "babel-loader": "^9.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "semver": "^7.6.3",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
   }
