--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
-    "build-and-tag": "node build.js"
+    "build-and-tag": "./build-and-tag.sh"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,6 @@
     "babel-loader": "^9.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "semver": "^7.6.3",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
   }
