--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
+    "build-mjs": "node --experimental-modules build.mjs",
     "build-and-tag": "./build-and-tag.sh"
   },
   "keywords": [],
@@ -20,5 +21,8 @@
     "react-dom": "^18.3.1",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
+  },
+  "devDependencies": {
+    "esbuild": "^0.23.1"
   }
 }
